--- a/src/resources/resources.qrc
+++ b/src/resources/resources.qrc
@@ -14,5 +14,6 @@
         <file>waves/wave6.png</file>
         <file>waves/wave7.png</file>
         <file>pencil_16x16.png</file>
+        <file>mporto.png</file>
     </qresource>
 </RCC>
