--- a/src/bank_editor.ui
+++ b/src/bank_editor.ui
@@ -3470,7 +3470,7 @@ Available from 0 to 127</string>
      <x>0</x>
      <y>0</y>
      <width>1035</width>
-     <height>22</height>
+     <height>24</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -3482,6 +3482,7 @@ Available from 0 to 127</string>
     <addaction name="actionImport"/>
     <addaction name="actionOpen"/>
     <addaction name="actionSave"/>
+    <addaction name="actionSaveAs"/>
     <addaction name="actionSaveInstrument"/>
     <addaction name="separator"/>
     <addaction name="actionExit"/>
@@ -3490,7 +3491,15 @@ Available from 0 to 127</string>
     <property name="title">
      <string>Help</string>
     </property>
+    <widget class="QMenu" name="menuLanguage">
+     <property name="title">
+      <string>Language</string>
+     </property>
+     <addaction name="actionLanguageDefault"/>
+     <addaction name="separator"/>
+    </widget>
     <addaction name="actionFormatsSup"/>
+    <addaction name="menuLanguage"/>
     <addaction name="separator"/>
     <addaction name="actionAbout"/>
    </widget>
@@ -3551,7 +3560,7 @@ Available from 0 to 127</string>
   </action>
   <action name="actionSave">
    <property name="text">
-    <string>Save bank as...</string>
+    <string>Save bank...</string>
    </property>
    <property name="shortcut">
     <string notr="true">Ctrl+S</string>
@@ -3720,6 +3729,16 @@ Available from 0 to 127</string>
   <action name="actionDelayAnalysis">
    <property name="text">
     <string>Run delay analysis</string>
+   </property>
+  </action>
+  <action name="actionLanguageDefault">
+   <property name="text">
+    <string>System default</string>
+   </property>
+  </action>
+  <action name="actionSaveAs">
+   <property name="text">
+    <string>Save bank as...</string>
    </property>
   </action>
  </widget>
