--- a/src/register_editor.ui
+++ b/src/register_editor.ui
@@ -19,7 +19,7 @@
      <item row="0" column="0">
       <widget class="QLabel" name="label">
        <property name="text">
-        <string>$30</string>
+        <string notr="true">$30</string>
        </property>
       </widget>
      </item>
@@ -38,7 +38,7 @@
         </size>
        </property>
        <property name="text">
-        <string>FF</string>
+        <string notr="true">FF</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -60,7 +60,7 @@
         </size>
        </property>
        <property name="text">
-        <string>FF</string>
+        <string notr="true">FF</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -82,7 +82,7 @@
         </size>
        </property>
        <property name="text">
-        <string>FF</string>
+        <string notr="true">FF</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -104,7 +104,7 @@
         </size>
        </property>
        <property name="text">
-        <string>FF</string>
+        <string notr="true">FF</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -114,7 +114,7 @@
      <item row="1" column="0">
       <widget class="QLabel" name="label_2">
        <property name="text">
-        <string>$40</string>
+        <string notr="true">$40</string>
        </property>
       </widget>
      </item>
@@ -133,7 +133,7 @@
         </size>
        </property>
        <property name="text">
-        <string>FF</string>
+        <string notr="true">FF</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -155,7 +155,7 @@
         </size>
        </property>
        <property name="text">
-        <string>FF</string>
+        <string notr="true">FF</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -177,7 +177,7 @@
         </size>
        </property>
        <property name="text">
-        <string>FF</string>
+        <string notr="true">FF</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -199,7 +199,7 @@
         </size>
        </property>
        <property name="text">
-        <string>FF</string>
+        <string notr="true">FF</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -209,7 +209,7 @@
      <item row="2" column="0">
       <widget class="QLabel" name="label_3">
        <property name="text">
-        <string>$50</string>
+        <string notr="true">$50</string>
        </property>
       </widget>
      </item>
@@ -228,7 +228,7 @@
         </size>
        </property>
        <property name="text">
-        <string>FF</string>
+        <string notr="true">FF</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -250,7 +250,7 @@
         </size>
        </property>
        <property name="text">
-        <string>FF</string>
+        <string notr="true">FF</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -272,7 +272,7 @@
         </size>
        </property>
        <property name="text">
-        <string>FF</string>
+        <string notr="true">FF</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -294,7 +294,7 @@
         </size>
        </property>
        <property name="text">
-        <string>FF</string>
+        <string notr="true">FF</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -304,7 +304,7 @@
      <item row="3" column="0">
       <widget class="QLabel" name="label_4">
        <property name="text">
-        <string>$60</string>
+        <string notr="true">$60</string>
        </property>
       </widget>
      </item>
@@ -323,7 +323,7 @@
         </size>
        </property>
        <property name="text">
-        <string>FF</string>
+        <string notr="true">FF</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -345,7 +345,7 @@
         </size>
        </property>
        <property name="text">
-        <string>FF</string>
+        <string notr="true">FF</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -367,7 +367,7 @@
         </size>
        </property>
        <property name="text">
-        <string>FF</string>
+        <string notr="true">FF</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -389,7 +389,7 @@
         </size>
        </property>
        <property name="text">
-        <string>FF</string>
+        <string notr="true">FF</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -399,7 +399,7 @@
      <item row="4" column="0">
       <widget class="QLabel" name="label_5">
        <property name="text">
-        <string>$70</string>
+        <string notr="true">$70</string>
        </property>
       </widget>
      </item>
@@ -418,7 +418,7 @@
         </size>
        </property>
        <property name="text">
-        <string>FF</string>
+        <string notr="true">FF</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -440,7 +440,7 @@
         </size>
        </property>
        <property name="text">
-        <string>FF</string>
+        <string notr="true">FF</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -462,7 +462,7 @@
         </size>
        </property>
        <property name="text">
-        <string>FF</string>
+        <string notr="true">FF</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -484,7 +484,7 @@
         </size>
        </property>
        <property name="text">
-        <string>FF</string>
+        <string notr="true">FF</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -494,7 +494,7 @@
      <item row="5" column="0">
       <widget class="QLabel" name="label_6">
        <property name="text">
-        <string>$80</string>
+        <string notr="true">$80</string>
        </property>
       </widget>
      </item>
@@ -513,7 +513,7 @@
         </size>
        </property>
        <property name="text">
-        <string>FF</string>
+        <string notr="true">FF</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -535,7 +535,7 @@
         </size>
        </property>
        <property name="text">
-        <string>FF</string>
+        <string notr="true">FF</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -557,7 +557,7 @@
         </size>
        </property>
        <property name="text">
-        <string>FF</string>
+        <string notr="true">FF</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -579,7 +579,7 @@
         </size>
        </property>
        <property name="text">
-        <string>FF</string>
+        <string notr="true">FF</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -589,7 +589,7 @@
      <item row="6" column="0">
       <widget class="QLabel" name="label_7">
        <property name="text">
-        <string>$90</string>
+        <string notr="true">$90</string>
        </property>
       </widget>
      </item>
@@ -608,7 +608,7 @@
         </size>
        </property>
        <property name="text">
-        <string>FF</string>
+        <string notr="true">FF</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -630,7 +630,7 @@
         </size>
        </property>
        <property name="text">
-        <string>FF</string>
+        <string notr="true">FF</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -652,7 +652,7 @@
         </size>
        </property>
        <property name="text">
-        <string>FF</string>
+        <string notr="true">FF</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -674,7 +674,7 @@
         </size>
        </property>
        <property name="text">
-        <string>FF</string>
+        <string notr="true">FF</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -713,7 +713,7 @@
         </size>
        </property>
        <property name="text">
-        <string>FF</string>
+        <string notr="true">FF</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -761,7 +761,7 @@
         </size>
        </property>
        <property name="text">
-        <string>FF</string>
+        <string notr="true">FF</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
